--- a/templates/mygallery/album/footer.html
+++ b/templates/mygallery/album/footer.html
@@ -1,27 +1,9 @@
 <!-- Footer -->
 <div><br><br><br></div>
-<style type="text/css">
-a.btn{
-    color: #ffffff;
-    background: #f0ad4e;
-    margin: 0px 10px 10px 10px;
-    padding: 0px 10px;
-    text-decoration: none;
-    vertical-align: middle;
-}
-.footer-top{
-    position: center;
-}
-</style>
-
-<footer class="py-3 bg-dark fixed-bottom">
+<footer class="py-3 fixed-bottom" style="background: #181821">
         <div class="gcs-footer">
-            <div class="text-center">
-                    <a  href="#" class="btn" >创建相册</a>
-                    <a href="#" class="btn">删除相册</a>|
-            </div>
-            <p class="m-0 text-center text-white">
-            Copyright &copy; 电子科技大学软件工程12小组
+            <p class="m-0 text-center text-white" style="font-size: 17px">
+            Copyright &copy; C-Gallery
             </p>
         </div>
 </footer>
