--- a/templates/mygallery/photo/footer.html
+++ b/templates/mygallery/photo/footer.html
@@ -1,30 +1,28 @@
 <!-- Footer -->
 <div><br><br><br></div>
 <style type="text/css">
-a.btn{
+a.mybtn{
     color: #ffffff;
-    background: #f0ad4e;
+    background: #83d8ae;
+    font-size: 20px;
     margin: 0px 10px 10px 10px;
     padding: 0px 10px;
     text-decoration: none;
+    border-radius: 5px 5px 5px 5px;
     vertical-align: middle;
-}
-.footer-top{
-    position: center;
 }
 </style>
 
-<footer class="py-3 bg-dark fixed-bottom">
+<footer class="py-3 fixed-bottom" style="background: #181821">
         <div class="gcs-footer">
             <div class="text-center">
                 {% for album in albumlist %}
-                    <a href="#" class="btn">编辑相册</a>|
-                    <a  href="../upload/{{ album.id }}" class="btn" >添加照片</a>
-                    <a href="#" class="btn">删除照片</a>
+                    <a  href="../upload/{{ album.id }}" class="mybtn" >添加照片</a>
+                    <a href="../../album/webindex" class="mybtn">返回相册</a>
                 {% endfor %}
             </div>
-            <p class="m-0 text-center text-white">
-            Copyright &copy; 电子科技大学软件工程12小组
+            <p class="m-0 text-center text-white" style="font-size: 17px">
+            Copyright &copy; C-Gallery
             </p>
         </div>
 </footer>
