--- a/templates/mygallery/photo/upload_photo.html
+++ b/templates/mygallery/photo/upload_photo.html
@@ -31,6 +31,14 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
         <![endif]-->
+        {% if messages %}
+        <script>
+            {% for msg in messages %}
+                alert('{{ msg.message }}');
+            {% endfor %}
+        </script>
+    {% endif %}
+    </head>
     <body class="page-sidebar-collapsed">
         <div class="page-container">
           <div class="page-sidebar">
@@ -60,12 +68,10 @@
                                     <h5 class="card-title">图片类别选择</h5>
                                     <p class="card-description">请选择您的图片 <code>&lt;风格&gt;</code> 
                                     <select name="photo_category" class="form-select" aria-label="Default select example">
-                                        <option value="0">Open this select menu</option>
-                                            <option value="1">Animal</option>
-                                            <option value="2">Family</option>
-                                            <option value="3">Food</option>
-                                            <option value="4">Idol</option>
-                                            <option value="5">Scenery</option>
+{#                                        <option value="">Open this select menu</option>#}
+                                            {% for vo in categorylist %}
+                                            <option value={{ vo.id }}>{{ vo.Category_name }}</option>
+                                            {% endfor %}
                                       </select>
                                       <p> </p>
 
@@ -97,9 +103,10 @@
                                       <p> </p>
                                       
                                       <button type="submit" class="btn btn-primary">提交</button>
-                                  
-                                  </form>
 
+                                      <p> </p>
+                                      <p style="color: red">{{ error_msg }}</p>
+                                  </form>
                                 </div>
                             </div>
                         </div>
