--- a/templates/mygallery/share/base.html
+++ b/templates/mygallery/share/base.html
@@ -1,1 +1,47 @@
-{% load static %} {% include './header.html' %} {% block content %}{% endblock content %} {% include './footer.html' %} {% block scripts %}{% endblock scripts %}
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <!-- 预留页面标题位置 -->
+    <title>{% block title %}{% endblock title %}</title>
+    <!-- bootstrap.css -->
+    <link 
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
+    crossorigin="anonymous">
+
+    {% load static %}
+    <link rel="stylesheet" href="{% static 'mygallery/share/hover.css' %}">
+
+  </head>
+  <body>
+    {% include './header.html' %}
+    <!-- 预留具体页面的位置 -->
+    {% block content %}{% endblock content %}
+    <!-- 引入注脚 -->
+    {% include './footer.html' %}
+    <!-- bootstrap.js -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>
+    <script 
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+    <script 
+    src="https://cdn.jsdelivr.net/npm/masonry-layout@4.2.2/dist/masonry.pkgd.min.js" 
+    integrity="sha384-GNFwBvfVxBkLMJpYMOABq3c+d3KnQxudP/mGPkzpZSTYykLBNsZEnG2D9G/X/+7D"
+    crossorigin="anonymous" 
+    async></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@3/dist/vue.global.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="{% static 'bounds.js' %}"></script>
+    <!-- 预留脚本的位置 -->
+    {% block scripts %}{% endblock scripts %}
+
+    <style>
+        body {
+            background-color:#181821;
+        }
+    </style>
+  </body>
+</html>
